@@ -9,6 +9,8 @@
 - Changed a number of _desc attributes to _examine
 - Added parsing for Target2 and modified flags to handle Target1 and Target2 flags
 - Added some extra flags (without code support yet)
+- Added some additional specials functions
+- Added the OnlySpecials flag to doors so they don't work without specials
 
 6/12/2020
 - Added the ScriptEngine class to manage scripting/specials
